--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ngrx/effects": "^2.0.2",
     "@ngrx/store": "^2.2.1",
     "@ngrx/store-devtools": "^3.2.4",
+    "@swimlane/ngx-datatable": "^9.2.0",
     "@types/body-parser": "^1.16.3",
     "@types/compression": "^0.0.33",
     "@types/cors": "^2.8.1",
