--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Balboa Features",
   "private": true,
   "dependencies": {
+    "@angular-mdl/core": "^4.0.6",
     "@angular/cli": "^1.0.0",
     "@angular/common": "^4.0.1",
     "@angular/compiler": "^4.0.1",
