--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
   },
   "author": "Balboa Features",
   "private": true,
+  "engines": {
+    "node": "6.10.x",
+    "npm": "3.10.x"
+  },
   "dependencies": {
     "@angular-mdl/core": "^4.0.6",
     "@angular/cli": "^1.0.0",
@@ -32,11 +36,11 @@
     "@types/body-parser": "^1.16.3",
     "@types/compression": "^0.0.33",
     "@types/express": "^4.0.35",
-    "@types/jasmine": "2.5.38",
-    "@types/node": "~6.0.60",
+    "@types/jasmine": "^2.5.49",
+    "@types/node": "^7.0.23",
     "body-parser": "~1.17.1",
     "compression": "^1.6.2",
-    "cookie-parser": "~1.3.5",
+    "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
     "express": "^4.15.2",
     "ng2-smart-table": "^1.2.1",
@@ -44,25 +48,25 @@
     "rxjs": "^5.1.0",
     "ts-helpers": "^1.1.2",
     "ts-node": "~3.0.2",
-    "tslint": "^4.5.1",
+    "tslint": "^5.4.2",
     "typescript": "^2.2.2",
     "uuid": "^3.0.1",
     "zone.js": "^0.8.9"
   },
   "devDependencies": {
-    "codelyzer": "~2.1.1",
+    "codelyzer": "^3.0.1",
     "concurrently": "^3.1.0",
-    "jasmine-core": "~2.5.2",
-    "jasmine-spec-reporter": "~3.2.0",
-    "karma": "~1.5.0",
-    "karma-chrome-launcher": "~2.0.0",
+    "jasmine-core": "^2.6.2",
+    "jasmine-spec-reporter": "^4.1.0",
+    "karma": "^1.7.0",
+    "karma-chrome-launcher": "^2.1.1",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^0.2.0",
+    "karma-coverage-istanbul-reporter": "^1.3.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-remap-istanbul": "^0.2.1",
+    "karma-remap-istanbul": "^0.6.0",
     "nodemon": "^1.11.0",
     "protractor": "~5.1.0",
-    "webdriver-manager": "10.2.5"
+    "webdriver-manager": "^12.0.6"
   }
 }
