--- a/package.json
+++ b/package.json
@@ -17,52 +17,50 @@
   "author": "Balboa Features",
   "private": true,
   "dependencies": {
-    "@angular-mdl/core": "^4.0.6",
-    "@angular/cli": "^1.0.0",
-    "@angular/common": "^4.0.1",
-    "@angular/compiler": "^4.0.1",
-    "@angular/compiler-cli": "^4.0.1",
-    "@angular/core": "^4.0.1",
-    "@angular/forms": "^4.0.1",
-    "@angular/http": "^4.0.1",
-    "@angular/platform-browser": "^4.0.1",
-    "@angular/platform-browser-dynamic": "^4.0.1",
-    "@angular/router": "^4.0.1",
-    "@swimlane/ngx-datatable": "^9.2.0",
-    "@types/body-parser": "^1.16.3",
-    "@types/compression": "^0.0.33",
-    "@types/express": "^4.0.35",
-    "@types/jasmine": "2.5.38",
-    "@types/node": "~6.0.60",
-    "body-parser": "~1.17.1",
-    "compression": "^1.6.2",
-    "cookie-parser": "~1.3.5",
-    "core-js": "^2.4.1",
-    "express": "^4.15.2",
-    "ng2-smart-table": "^1.2.1",
-    "path": "^0.12.7",
-    "rxjs": "^5.1.0",
-    "ts-helpers": "^1.1.2",
-    "ts-node": "~3.0.2",
-    "tslint": "^4.5.1",
-    "typescript": "^2.2.2",
-    "uuid": "^3.0.1",
-    "zone.js": "^0.8.9"
+    "@angular-mdl/core": "4.0.6",
+    "@angular/cli": "1.1.0",
+    "@angular/common": "4.1.3",
+    "@angular/compiler": "4.1.3",
+    "@angular/compiler-cli": "4.1.3",
+    "@angular/core": "4.1.3",
+    "@angular/forms": "4.1.3",
+    "@angular/http": "4.1.3",
+    "@angular/platform-browser": "4.1.3",
+    "@angular/platform-browser-dynamic": "4.1.3",
+    "@angular/router": "4.1.3",
+    "@swimlane/ngx-datatable": "9.3.0",
+    "@types/body-parser": "1.16.3",
+    "@types/compression": "0.0.33",
+    "@types/express": "4.0.35",
+    "@types/jasmine": "2.5.51",
+    "@types/node": "7.0.27",
+    "body-parser": "1.17.2",
+    "compression": "1.6.2",
+    "core-js": "2.4.1",
+    "express": "4.15.3",
+    "ng2-smart-table": "1.2.1",
+    "path": "0.12.7",
+    "rxjs": "5.4.0",
+    "ts-helpers": "1.1.2",
+    "ts-node": "3.0.4",
+    "tslint": "5.4.2",
+    "typescript": "2.3.4",
+    "zone.js": "0.8.11"
   },
   "devDependencies": {
-    "codelyzer": "~2.1.1",
-    "concurrently": "^3.1.0",
-    "jasmine-core": "~2.5.2",
-    "jasmine-spec-reporter": "~3.2.0",
-    "karma": "~1.5.0",
-    "karma-chrome-launcher": "~2.0.0",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^0.2.0",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-remap-istanbul": "^0.2.1",
-    "nodemon": "^1.11.0",
-    "protractor": "~5.1.0",
-    "webdriver-manager": "10.2.5"
+    "codelyzer": "3.0.1",
+    "concurrently": "3.4.0",
+    "jasmine-core": "2.6.2",
+    "jasmine-spec-reporter": "4.1.0",
+    "karma": "1.7.0",
+    "karma-chrome-launcher": "2.1.1",
+    "karma-cli": "1.0.1",
+    "karma-coverage-istanbul-reporter": "1.3.0",
+    "karma-jasmine": "1.1.0",
+    "karma-jasmine-html-reporter": "0.2.2",
+    "karma-remap-istanbul": "0.6.0",
+    "nodemon": "1.11.0",
+    "protractor": "5.1.2",
+    "webdriver-manager": "12.0.6"
   }
 }
