--- a/package.json
+++ b/package.json
@@ -39,16 +39,23 @@
     "@types/jsonwebtoken": "^7.2.0",
     "@types/node": "~6.0.60",
     "@types/uuid": "^2.0.29",
+    "apm": "^1.0.2",
+    "astrolabe": "^0.3.6",
     "body-parser": "~1.17.1",
+    "brew": "0.0.8",
     "compression": "^1.6.2",
     "cookie-parser": "~1.3.5",
     "core-js": "^2.4.1",
     "express": "^4.15.2",
     "express-jwt": "^5.1.0",
+    "jshint-stylish": "^2.2.1",
     "jsonwebtoken": "^7.3.0",
     "ngrx-store-freeze": "^0.1.9",
     "normalize.css": "^5.0.0",
+    "os-tmpdir": "^1.0.2",
     "path": "^0.12.7",
+    "pip": "0.0.1",
+    "requirejs": "^2.3.3",
     "rxjs": "^5.1.0",
     "ts-helpers": "^1.1.2",
     "ts-node": "~3.0.2",
@@ -58,8 +65,21 @@
     "zone.js": "^0.8.9"
   },
   "devDependencies": {
+    "chai": "^4.0.0",
+    "chai-as-promised": "^6.0.0",
     "codelyzer": "~2.1.1",
     "concurrently": "^3.1.0",
+    "cucumber": "^2.2.0",
+    "extend": "^3.0.1",
+    "grunt": "^1.0.1",
+    "grunt-cli": "^1.2.0",
+    "grunt-contrib-clean": "^1.1.0",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-template": "^1.1.4-1",
+    "grunt-protractor-cucumber-html-report": "^0.2.8",
+    "grunt-protractor-runner": "^5.0.0",
+    "grunt-selenium-standalone": "^1.0.1",
+    "grunt-template": "^1.0.0",
     "jasmine-core": "~2.5.2",
     "jasmine-spec-reporter": "~3.2.0",
     "karma": "~1.5.0",
@@ -69,8 +89,13 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-remap-istanbul": "^0.2.1",
+    "load-grunt-configs": "^1.0.0",
+    "load-grunt-tasks": "^3.5.2",
     "nodemon": "^1.11.0",
-    "protractor": "~5.1.0",
+    "protractor": "^5.1.2",
+    "protractor-cucumber": "^0.1.8",
+    "protractor-cucumber-framework": "^3.1.0",
+    "protractor-cucumber-steps": "^0.5.0",
     "webdriver-manager": "10.2.5"
   }
 }
