--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "author": "Balboa Features",
   "private": true,
   "dependencies": {
+    "@angular-generic-table/core": "^4.2.0",
     "@angular-mdl/core": "^4.0.6",
+    "@angular/animations": "^4.1.3",
     "@angular/cli": "^1.0.0",
     "@angular/common": "^4.0.1",
     "@angular/compiler": "^4.0.1",
@@ -25,6 +27,7 @@
     "@angular/core": "^4.0.1",
     "@angular/forms": "^4.0.1",
     "@angular/http": "^4.0.1",
+    "@angular/material": "^2.0.0-beta.6",
     "@angular/platform-browser": "^4.0.1",
     "@angular/platform-browser-dynamic": "^4.0.1",
     "@angular/router": "^4.0.1",
@@ -39,8 +42,10 @@
     "cookie-parser": "~1.3.5",
     "core-js": "^2.4.1",
     "express": "^4.15.2",
+    "ng2-md-datatable": "^1.3.13",
     "ng2-smart-table": "^1.2.1",
     "path": "^0.12.7",
+    "right-angled": "^1.2.2",
     "rxjs": "^5.1.0",
     "ts-helpers": "^1.1.2",
     "ts-node": "~3.0.2",
