Configured client-side UT and some NPM scripts for UT

--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "start": "concurrently --kill-others \"npm run _server:run\" \"ng serve --aot=true --progress=false --proxy-config proxy.conf.json\"",
     "lint:client": "ng lint",
     "lint:server": "tslint './server/**/*.ts' -c ./server/tslint.json --fix",
-    "test:client": "ng test",
+    "test:client": "ng test --single-run=true --code-coverage",
+    "test-watch:client": "ng test",
     "e2e:client": "ng e2e",
+    "check": "npm run lint:client && npm run test:client",
     "build": "ng build --prod --sm=false --aot=true --output-path=dist/client && npm run _server:build",
     "_server:run": "tsc -p ./server && concurrently \"tsc -w -p ./server\" \"nodemon dist/server/bin/www.js\" ",
     "_server:build": "tsc -p ./server",
@@ -61,6 +63,7 @@
     "karma-chrome-launcher": "2.1.1",
     "karma-cli": "1.0.1",
     "karma-coverage-istanbul-reporter": "1.3.0",
+    "karma-istanbul-threshold": "^1.2.2",
     "karma-jasmine": "1.1.0",
     "karma-jasmine-html-reporter": "0.2.2",
     "karma-remap-istanbul": "0.6.0",
