--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "main": "server/app.js",
   "scripts": {
     "start": "concurrently --kill-others \"npm run _server:run\" \"ng serve --aot=true --progress=false --proxy-config proxy.conf.json\"",
+    "build": "ng build --prod --sm=false --aot=true --output-path=dist/client && npm run _server:build",
+    "check": "npm run lint && npm run test",
+    "lint": "npm run lint:client && npm run lint:server",
+    "test": "npm run test:client && npm run test:server",
     "lint:client": "ng lint",
     "lint:server": "tslint './server/**/*.ts' -c ./server/tslint.json --fix",
     "test:client": "ng test --single-run=true --code-coverage",
+    "test:server": "mocha -r ts-node/register server/**/*.spec.ts",
     "test-watch:client": "ng test",
+    "test-watch:server": "mocha -r ts-node/register server/**/*.spec.ts --watch-extensions ts --watch",
     "e2e:client": "ng e2e",
-    "check": "npm run lint:client && npm run test:client",
-    "build": "ng build --prod --sm=false --aot=true --output-path=dist/client && npm run _server:build",
     "_server:run": "tsc -p ./server && concurrently \"tsc -w -p ./server\" \"nodemon dist/server/bin/www.js\" ",
     "_server:build": "tsc -p ./server",
     "postinstall": "npm run build"
@@ -55,6 +59,7 @@
     "zone.js": "0.8.11"
   },
   "devDependencies": {
+    "chai": "^4.0.2",
     "codelyzer": "3.0.1",
     "concurrently": "3.4.0",
     "jasmine-core": "2.6.2",
@@ -67,8 +72,10 @@
     "karma-jasmine": "1.1.0",
     "karma-jasmine-html-reporter": "0.2.2",
     "karma-remap-istanbul": "0.6.0",
+    "mocha": "^3.4.2",
     "nodemon": "1.11.0",
     "protractor": "5.1.2",
+    "sinon": "^2.3.2",
     "webdriver-manager": "12.0.6"
   }
 }
