--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "check": "npm run lint && npm run test",
     "lint": "echo '====== CHECK CLIENT-SIDE ======' && npm run lintClient && echo '====== CHECK SERVER-SIDE ======' && npm run lintServer && echo '====== CHECK STYLES ======' && npm run lintStyles",
     "test": "echo '====== TESTS CLIENT-SIDE ======' && npm run testClientCover && echo '====== TESTS SERVER-SIDE ======' && npm run testServerCover",
-    "lintClient": "ng lint --format stylish true",
-    "lintServer": "tslint './server/**/*.ts' -c ./config/tslint/tslint.server.json --format stylish true",
+    "lintClient": "ng lint --format stylish",
+    "lintServer": "tslint './server/**/*.ts' -c ./config/tslint/tslint.server.json --format stylish",
     "lintStyles": "sass-lint -c .sass-lint.yml -v -q",
     "testClient": "ng test --single-run=true",
     "testClientCover": "ng test --single-run=true --code-coverage",
