--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "grunt-protractor-runner": "^5.0.0",
     "grunt-selenium-standalone": "^1.0.1",
     "grunt-template": "^1.0.0",
+    "grunt-version-check": "^0.3.8",
     "jasmine-core": "~2.5.2",
     "jasmine-spec-reporter": "~3.2.0",
     "karma": "~1.5.0",
